--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,34 +1,51 @@
 name: Release
 
-on: push
-
-permissions:
-  contents: write
+on:
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install typst
-        run: |
-          sudo snap install typst
+      - name: Install Nix
+        uses: cachix/install-nix-action@v30
+        with:
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Compile typst
+      - name: Get short SHA
+        id: get-sha
+        shell: bash
         run: |
-          typst compile resume.typ --input title=${{ vars.TITLE }} --input author=${{ vars.AUTHOR }} --input email=${{ vars.EMAIL }} --input links=${{ vars.LINKS }}
+          SHA=$(git rev-parse --short HEAD)
+          echo "tag_name=$SHA" >> "$GITHUB_OUTPUT"
 
-      - name: Get tag name
-        id: tag-name
+      - name: Compile typst (PDF + PNG)
         run: |
-          echo "tagname=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-      
-      - name: Upload doc
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release create ${{ steps.tag-name.outputs.tagname }} -t "Documents" -n "Generated documents (${{ steps.tag-name.outputs.tagname }})"
-          gh release upload ${{ steps.tag-name.outputs.tagname }} *.pdf
+          nix develop --command typst compile resume.typ \
+            --input title=${{ vars.TITLE }} \
+            --input author=${{ vars.AUTHOR }} \
+            --input email=${{ vars.EMAIL }} \
+            --input links=${{ vars.LINKS }} \
+            --format pdf resume-${{ steps.get-sha.outputs.tag_name }}.pdf
+
+          nix develop --command typst compile resume.typ \
+            --input title=${{ vars.TITLE }} \
+            --input author=${{ vars.AUTHOR }} \
+            --input email=${{ vars.EMAIL }} \
+            --input links=${{ vars.LINKS }} \
+            --format png --pages 1
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.get-sha.outputs.tag_name }}
+          release_name: "Release ${{ steps.get-sha.outputs.tag_name }}"
+          generate_release_notes: true
+          files: |
+            resume-${{ steps.get-sha.outputs.tag_name }}.pdf
+            resume.png
