--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,6 @@
 name: Release
-
 on:
   workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,41 +9,43 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Install Nix
         uses: cachix/install-nix-action@v30
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Get short SHA
         id: get-sha
         shell: bash
         run: |
           SHA=$(git rev-parse --short HEAD)
           echo "tag_name=$SHA" >> "$GITHUB_OUTPUT"
-
+      - name: Get date
+        id: get-date
+        shell: bash
+        run: echo "today=$(date -u +'%Y-%m-%d')" >> "$GITHUB_OUTPUT"
       - name: Compile typst (PDF + PNG)
         run: |
           nix develop --command typst compile resume.typ \
             --input title=${{ vars.TITLE }} \
             --input author=${{ vars.AUTHOR }} \
+            --input phone=${{ vars.PHONE }} \
             --input email=${{ vars.EMAIL }} \
             --input links=${{ vars.LINKS }} \
-            --format pdf resume-${{ steps.get-sha.outputs.tag_name }}.pdf
+            --format pdf garrett-simpson-software-engineer-resume.pdf
 
           nix develop --command typst compile resume.typ \
             --input title=${{ vars.TITLE }} \
             --input author=${{ vars.AUTHOR }} \
+            --input phone=${{ vars.PHONE }} \
             --input email=${{ vars.EMAIL }} \
             --input links=${{ vars.LINKS }} \
-            --format png --pages 1
-
+            --format png garrett-simpson-software-engineer-resume.png --pages 1
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.get-sha.outputs.tag_name }}
-          name: "Release ${{ steps.get-sha.outputs.tag_name }}"
+          name: ${{ steps.get-date.outputs.today }}
           generate_release_notes: true
           files: |
-            resume-${{ steps.get-sha.outputs.tag_name }}.pdf
-            resume.png
+            garrett-simpson-software-engineer-resume.pdf
+            garrett-simpson-software-engineer-resume.png
